css/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');

* {
    font-family: Outfit !important;
}

body {
    background-color: #0C0A09;
    color: white;
}

#choice{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    background-color: #292524;
    height: 200px;
    width: 300px;
    margin: auto;
    border-radius: 30px;
}


.title-bar {
    background-color: #292524;
    border-radius: 10px;
    padding: 5px;
    margin: 5px;
    width: auto;
    height: 100px;
}

#choice label {
    margin-top: 20px;
    font-weight: bold;
}

#choice button {
    padding: 10px;
    border-radius: 6px;
    background-color: #5c4f4c;
    /* Delete white outline */
    border: 0px;
    color: white;
    margin-top: 5px;
}

#chat-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    background-color: #292524;
    height: auto;
    width: 750px;
    margin: auto;
    border-radius: 30px;
}

#chat-form label {
    margin-top: 20px;
    font-weight: bold;
}

#chat-form textarea[id="userInput"] {
    width: 80%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #292524;
    color: white;
    font-size: 12px;
}

#chat-form input[type="submit"] {
    width: 20%;
    padding: 10px 2px;
    margin: 0px 0;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #292524;
    color: white;
}

.chat-history {
    position: relative;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 20px;
    background-color: #292524;
    color: white;
    z-index: 0;
    padding: 10px;
    max-height: 80vh; /* Adjust this to ensure the chat doesn't overflow */
    overflow-y: auto;
    padding-bottom: 100px; /* Adds space for the footer */
    margin: 20px;
    width: 75%;
}

.ai-message {
    background-color: #5c4f4c;
    padding: 10px;
    border-radius: 15px 15px 15px 0;
    margin-bottom: 10px;
    float: left;
    text-align: left;
    max-width: 70%;
    clear: both;
    color: white;
}

.user-message {
    background-color: #5c4f4c;
    padding: 10px;
    border-radius: 15px 15px 0 15px;
    margin-bottom: 10px;
    text-align: right;
    max-width: 70%;
    float: right;
    clear: both;
    color: white;
}

.ai-message::before {
    content: "Ai: ";
    font-weight: bold;
    text-align: left;
}

.user-message::before {
    content: "User: ";
    font-weight: bold;
    text-align: right;
}

#footertop {
    position: fixed;
    top: 10px;
    right: 30px;
    text-align: right;
    font-size: 14px;
    background-color: #443a37;
    padding: 10px;
    border: 2px solid gray;
    border-radius: 10px;

    a {
        color: #00ffea;
        text-decoration: none;
        transition: all 0.3s ease-in-out;
    }

    a:hover {
        color: #00c0b0;
        text-decoration: underline;
        transition: all 0.3s ease-in-out;
    }
}

.notifications {
    position: fixed;
    right: 10px;
    top: 10px;
}

.notification {
    background-color: #3f3a39;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 10px;
}

.copy-button {
    position: absolute;
    top: 10px;
    right: 10px;
    padding: 5px;
    background-color: transparent;
    border: none;
    cursor: pointer;
}
.copy-button img {
    width: 16px;
    height: 16px;
}
.popup {
    display: none;
    position: absolute;
    top: 40px;
    right: 10px;
    padding: 5px;
    background-color: #007bff;
    color: white;
    border-radius: 5px;
    font-size: 12px;
    opacity: 0;
    transition: opacity 0.5s ease;
}

#modelsForm {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

@media (max-width: 768px) {
    #chat-form {
        width: 100%;
    }

    .chat-history {
        width: 75%;
    }

    footer {
        width: 100%;
    }
}

